--- a/packages.bib
+++ b/packages.bib
@@ -48,6 +48,13 @@
   note = {R package version 1.23},
   url = {https://CRAN.R-project.org/package=knitr},
 }
+@Manual{R-networkD3,
+  title = {networkD3: D3 JavaScript Network Graphs from R},
+  author = {J.J. Allaire and Christopher Gandrud and Kenton Russell and CJ Yetman},
+  year = {2017},
+  note = {R package version 0.4},
+  url = {https://CRAN.R-project.org/package=networkD3},
+}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
