NA gildi í töflu 4.6 (samantekt á uppsprettum)

--- a/02-Farvegirnir.Rmd
+++ b/02-Farvegirnir.Rmd
@@ -2,7 +2,7 @@
 
 Rennandi vatn er helsti farvegur örplasts á landi til sjávar [@unice2019characterizing1] hvort sem það rennur eftir ám og lækjum eða niður ræsi og með skólpi. Aðrar farleiðir örplasts eru taldar upp í töflu \@ref(tab:fartafla). Margar gerðir örplasts flytjast að einhverju leyti með fleiri farvegum en einum en þrátt fyrir það eru ákveðnar uppsprettur örplasts einkennandi fyrir hvern farveg. Hér er því sett fram samantekt á því hvaða uppsprettur örplasts eru einkennandi fyrir hvern farveg, einkum þegar litið er til hlutfalls af heildarlosun hverrar uppsprettu. Þetta er því ekki tæmandi listi en er engu að síður hagnýt samantekt fyrir kortlagningu örplastmengunar innan einstakra vatnasvæða á Íslandi.
 
-Mesta magn örplasts sem fundist hefur hingað til í sjávarbotnsseti var rétt vestur af Svalbarða á 2,5 til 5,5 km dýpi [@Bergmann2017]. Útilokað er að sú mengun sé staðbundin og sýnir fram á að örplast berst með hafstraumum á fjarlæg hafsvæði. Örplast getur því einnig borist inn á íslenskt hafsvæði með hafstraumum. Til dæmis með flæði Atlantshafssjávar úr suðri en það flæði er árstíðabundið og mismikið milli ára [@Strait2005a] líkt og á við um hafstrauma sem fara í kringum Ísland og geta borið örplast frá helstu uppsprettum á suð- vesturhorni landsins, réttsælis með landinu norður fyrir Vestfirði [@Astthorsson1994] á svæði þar sem mengun er ekki eins mikil frá landi vegna fámennari byggða. 
+Örplast hefur fundist í miklu magni í botnseti rétt vestur af Svalbarða á 2,5 til 5,5 km dýpi  [@Bergmann2017]. Útilokað er að sú mengun sé staðbundin og sýnir fram á að örplast berst með hafstraumum á fjarlæg hafsvæði. Örplast getur því einnig borist inn á íslenskt hafsvæði með hafstraumum. Til dæmis með flæði Atlantshafssjávar úr suðri en það flæði er árstíðabundið og mismikið milli ára [@Strait2005a] líkt og á við um hafstrauma sem fara í kringum Ísland og geta borið örplast frá helstu uppsprettum á suð- vesturhorni landsins, réttsælis með landinu norður fyrir Vestfirði [@Astthorsson1994] á svæði þar sem mengun er ekki eins mikil frá landi vegna fámennari byggða. 
 
 
 ```{r fartafla, fig.cap='*Vegryk á við um hjólbarða og vegmerkingar', echo=FALSE, message=FALSE, warning=FALSE}
