--- a/03-Uppspr.Rmd
+++ b/03-Uppspr.Rmd
@@ -914,8 +914,8 @@ nafn <- c('Bifreiðahjólbarðar',
 
 lagt <- c(371, 41, 26, 33.2, 60, 3, 0.2, 8.2, 0.34, 1, 0.002)
 hatt <- c(586, 256, 50, 77.1, 260, 11, 2, 32, 3.4, 3, 0.177)
-losun <- c(164, 5.7, NA, 15.2, 3.2, 0.3, NA, 8.2, 0.34, NA, 0.002)
-losunb <- c(234, 42.6, NA, 36.1, 10, 1.1, NA, 32, 3.4, NA, 0.177)
+losun <- c(164, 5.7,  "", 15.2, 3.2, 0.3, "", 8.2, 0.34, "", 0.002)
+losunb <- c(234, 42.6, "", 36.1, 10, 1.1, "", 32, 3.4, "", 0.177)
 
 tafla <- data.frame(nafn,lagt,hatt,losun,losunb)
 names(tafla) <- c('','Hærra mat','Lægra mat','Hærra mat','Lægra mat')
