Athugasemdir færðar inn

--- a/03-Uppspr.Rmd
+++ b/03-Uppspr.Rmd
@@ -97,9 +97,11 @@ if (knitr::is_html_output()) {
 
 ## Samgöngur, byggingar og iðnaður {-}
 
-Stærstu uppsprettur örplasts á Íslandi eru frá umferð um malbikaða vegi. Hjólbarðar og vegamálning innihalda plast sem verður að örplasti við slit [@kreider2010physical] en óvissa um afdrif þeirra er umtalsverð. Umferðarþungi hefur aukist síðasta áratuginn á Íslandi (yfir 20% í Reykjavík og um 30% á þjóðvegum \@ref(fig:umferdvisitala1)). Umferð á Íslandi fer að langmestu leyti um malbikaða vegi í þéttbýli og eftir þjóðvegum landsins. Farleiðir dekkjaagna (dekkja- og vegaagna) af vegum til sjávar eru annars vegar með vindum og hins vegar með ofanvatni^[„Uppbygging byggðar hefur þau áhrif að ógegndræpt yfirborð lands eykst, og vatn sem áður átti greiða leið ofan í jarðveg safnast saman á yfirborði ef ekkert er að gert. Úrkomuvatn sem fellur af húsþökum, götum, gangstéttum, bílastæðum og öðru þéttu yfirborði niður í fráveitukerfi er oft kallað „ofanvatn“. Hefðbundnar lausnir fela jafnan í sér að safna ofanvatni í fráveitukerfi sem er neðanjarðar, og leiða það þannig í pípum útaf svæðinu, oftast alla leið til sjávar.“ [@StefanFreyr]]. 
+Slit á hjólbörðum er ein af stærstu einstöku uppsprettum örplasts í heiminum [@lassen2015microplastics; @essel2015sources; @sundt2014sources] og stærstu uppsprettur örplasts á Íslandi eru frá umferð um malbikaða vegi. Hjólbarðar og vegamálning innihalda plast sem verður að örplasti við slit [@kreider2010physical]. Farleiðir dekkjaagna (dekkja- og vegaagna) af vegum til sjávar eru annars vegar með vindum og hins vegar með ofanvatni^[„Uppbygging byggðar hefur þau áhrif að ógegndræpt yfirborð lands eykst, og vatn sem áður átti greiða leið ofan í jarðveg safnast saman á yfirborði ef ekkert er að gert. Úrkomuvatn sem fellur af húsþökum, götum, gangstéttum, bílastæðum og öðru þéttu yfirborði niður í fráveitukerfi er oft kallað „ofanvatn“. Hefðbundnar lausnir fela jafnan í sér að safna ofanvatni í fráveitukerfi sem er neðanjarðar, og leiða það þannig í pípum útaf svæðinu, oftast alla leið til sjávar.“ [@StefanFreyr]] en óvissa um afdrif þeirra er umtalsverð.
 
-Umferðarþungi hefur aukist síðasta áratuginn á Íslandi ([yfir 30% í Reykjavík og um 45% á þjóðvegum](http://www.vegagerdin.is/upplysingar-og-utgafa/umferdin/tolfrumferdar/) sjá \@ref(fig:umferdvisitala1)). Slit á hjólbörðum er ein af stærstu einstöku uppsprettum örplasts í heiminum [@lassen2015microplastics; @essel2015sources; @sundt2014sources]. Frá því eftir miðbik síðustu aldar hafa stöðugar tækniframfarir verið drifnar áfram af pólitískum aðgerðum til að minnka mengun frá útblæstri bíla [@lee2007innovation] en í seinni tíð hefur kastljósið í meira mæli beinst að mengun ótengdri útblæstri. Dekkjaagnir eru mikilvægur hluti af þeirri mengun þar sem milli 20% og 50% gúmmís í dekkjum farþegabíla fellur til á formi svifryks ^[Svifryk er venjulega skilgreint sem agnir smærri en 10 $\mu$m (PM~10~) en agnir minni en 10 μm í þvermál eru mögulega líffræðilega virkar þar sem þær komast ofan í lungun hjá fólki [@heyder1986deposition]. Dekkjaagnir eru að jafnaði lítill hluti af svifryki frá vegum en þær hafa mælst frá 3% til 7% af rúmmáli í fínu svifryki (PM~2,5~) og allt að 10% í grófara svifryki (PM~10~) [@grigoratos2014non]. Þó ber að nefna að í íslenskri rannsókn fundust ekki dekkjaagnir í svifryki í Reykjavík [@Efla2015]. Aðstæður í Reykjavík eru sérstakar miðað við þá staði þar sem framkvæmdar eru þær rannsóknir á svifryki sem hér er vísað í. Í Reykjavík er meðalhiti lágur og mikill fjöldi rigningardaga en blautir vegir og lágt hitastig verja dekk sliti [@le1998evaluation].] og stærri agna þegar hjólbarðarnir eyðast við akstur [@atech2001national]. Dekkjaagnir eru að mestum hluta stærri en svifryk [@kreider2010physical] og setjast í kringum vegina [@Cadle1978] og í malbikið sjálft en malbik er misgljúpt eftir notkun [@Verschoor2016]. Uppsöfnun er þó takmörkuð þar sem vind hreyfir mikið og úrkoma skolar vegryki burtu með affallsvatni. Dekkjaagnir sem falla til geta brotnað niður að hluta við núninginn við vegina þegar þær losna frá dekkjunum sem veikir mótstöðu þeirra gagnvart útfjólubláu ljósi og færir þær nær niðurbroti í umhverfinu [@kreider2010physical; @Cadle1978].
+Frá því eftir miðbik síðustu aldar hafa stöðugar tækniframfarir verið drifnar áfram af pólitískum aðgerðum til að minnka mengun frá útblæstri bíla [@lee2007innovation] en í seinni tíð hefur kastljósið í meira mæli beinst að mengun ótengdri útblæstri. Dekkjaagnir eru mikilvægur hluti af þeirri mengun þar sem milli 20% og 50% gúmmís í dekkjum farþegabíla fellur til á formi svifryks ^[Svifryk er venjulega skilgreint sem agnir smærri en 10 $\mu$m (PM~10~) en agnir minni en 10 μm í þvermál eru mögulega líffræðilega virkar þar sem þær komast ofan í lungun hjá fólki [@heyder1986deposition]. Dekkjaagnir eru að jafnaði lítill hluti af svifryki frá vegum en þær hafa mælst frá 3% til 7% af rúmmáli í fínu svifryki (PM~2,5~) og allt að 10% í grófara svifryki (PM~10~) [@grigoratos2014non]. Þó ber að nefna að í íslenskri rannsókn fundust ekki dekkjaagnir í svifryki í Reykjavík [@Efla2015]. Aðstæður í Reykjavík eru sérstakar miðað við þá staði þar sem framkvæmdar eru þær rannsóknir á svifryki sem hér er vísað í. Í Reykjavík er meðalhiti lágur og mikill fjöldi rigningardaga en blautir vegir og lágt hitastig verja dekk sliti [@le1998evaluation].] og stærri agna þegar hjólbarðarnir eyðast við akstur [@atech2001national]. Dekkjaagnir eru að mestum hluta stærri en svifryk [@kreider2010physical] og setjast í kringum vegina [@Cadle1978] og í malbikið sjálft en malbik er misgljúpt eftir notkun [@Verschoor2016]. Uppsöfnun er þó takmörkuð þar sem vind hreyfir mikið og úrkoma skolar vegryki burtu með affallsvatni. Dekkjaagnir sem falla til geta brotnað niður að hluta við núninginn við vegina þegar þær losna frá dekkjunum sem veikir mótstöðu þeirra gagnvart útfjólubláu ljósi og færir þær nær niðurbroti í umhverfinu [@kreider2010physical; @Cadle1978].
+
+Umferð á Íslandi fer að langmestu leyti um malbikaða vegi í þéttbýli og eftir þjóðvegum landsins en umferðarþungi hefur aukist talsvert síðasta áratuginn (sjá mynd \@ref(fig:umferdvisitala1)). Íslenskir vegir eru byggðir á fyllingu með gljúpum jarðvegi og greiðri afvötnun [@Matinupa2012Summary] en þar sem plast er ekki vatnsleysanlegt gerum við ráð fyrir að það síist burtu út í jarðveginn frekar en að ferðast með grunnvatni [@ECHA2016]. Ofanvatn rennur að mestu út í jarðveginn við vegina en í þéttbýli rennur það einnig í ræsi í eða í læki og ár. Á strjálbýlli svæðum taka vegrásir og skurðir við ofanvatni. Hérlendar byggðir eru flestar við ströndina og helstu vegir milli bæja liggja eftir strandlengjunni og er því ekki löng leið milli helstu vega og sjávar. Þær agnir sem ofanvatnið ber með sér festast því síður í jarðvegi og ferskvatnsseti við slíkar aðstæður en aukin fjarlægð eykur líkurnar á viðloðun í jarðvegi eða botnfellingu [@BESSELING2017540].
 
 ```{r umferdvisitala1, echo=FALSE, fig.align="center", fig.cap="Vísitala umferðar (línur) ásamt meðalumferðarþunga yfir árið (stöplar) í þremur völdum sniðum innan höfuðborgarsvæðisins og á 16 lykilteljurum á hringveginum.", message=FALSE, warning=FALSE, dev=switch(output(), html = "svg", latex = "pdf"), dev.args=list(bg="transparent")}
 
@@ -140,7 +142,6 @@ legend('topleft', c('Hringvegur','Höfuðborgarsvæðið'),lty = 'solid',col=c(l
 
 ```
 
-Íslenskir vegir eru byggðir á fyllingu með gljúpum jarðvegi og greiðri afvötnun [@Matinupa2012Summary] en þar sem plast er ekki vatnsleysanlegt gerum við ráð fyrir að það síist burtu út í jarðveginn frekar en að ferðast með grunnvatni [@ECHA2016]. Ofanvatn rennur að mestu út í jarðveginn við vegina en í þéttbýli rennur það einnig í ræsi í eða í læki og ár. Á strjálbýlli svæðum taka vegrásir og skurðir við ofanvatni. Hérlendar byggðir eru flestar við ströndina og helstu vegir milli bæja liggja eftir strandlengjunni og er því ekki löng leið milli helstu vega og sjávar. Þær agnir sem ofanvatnið ber með sér festast því síður í jarðvegi og ferskvatnsseti við slíkar aðstæður en aukin fjarlægð eykur líkurnar á viðloðun í jarðvegi eða botnfellingu [@BESSELING2017540].
 
 Það fer í stórum dráttum eftir þéttni byggðar hversu háu hlutfalli ofanvatns er veitt í hafið með fráveitukerfum eða hve mikið seytlar niður í jarðveginn (sjá mynd \@ref(fig:ALTA))). Þar sem íslenskt þéttbýli er heldur í dreifðara lagi þá er hér reiknað með eftirfarandi:
 	  
@@ -152,20 +153,20 @@ legend('topleft', c('Hringvegur','Höfuðborgarsvæðið'),lty = 'solid',col=c(l
 knitr::include_graphics("myndir/ALTA.png")
 ```
 
-Við metum það sem svo að affallsvatn sem lendir í fráveitukerfum beri allar dekkjaagnir sem það inniheldur út í haf en það affallsvatn sem rennur í jarðveg losni við allar dekkjaagnir í jarðveginn. Það skal þó tekið fram að aðstæður eru mjög ólíkar á mismunandi svæðum landsins bæði m.t.t. jarðvegsgerðar og einnig eiginleika þéttbýla og þar stendur Reykjavík út úr. Mælingar á dekkjaögnum í affallsvatni eru erfiðar í framkvæmd og gögn skortir. Nokkur líkön hafa verið gerð til að áætla magn örplasts í framburði stórra áa í Evrópu en þau eru sum hver í mótsögn hvor við aðra [@unice2019characterizing1]. Þau eiga það þó sameiginlegt að áætla örplast frá dekkjum heilli stærðargráðu lægra en í þessari skýrslu þar sem þau lýsa aðstæðum sem eru gjörólíkar íslenskum aðstæðum t.d. er fjarlægð helstu uppspretta örplsts (borgir) í tugum til hundruða kílómetra fjarlægð frá árósum.
+Hér er það metið sem svo að affallsvatn sem lendir í fráveitukerfum beri allar dekkjaagnir sem það inniheldur út í haf en það affallsvatn sem rennur í jarðveg losni við allar dekkjaagnir í jarðveginn. Það skal þó tekið fram að aðstæður eru mjög ólíkar á mismunandi svæðum landsins bæði m.t.t. jarðvegsgerðar og einnig eiginleika þéttbýla og þar stendur Reykjavík út úr. Mælingar á dekkjaögnum í affallsvatni eru erfiðar í framkvæmd og gögn skortir. Nokkur líkön hafa verið gerð til að áætla magn örplasts í framburði stórra áa í Evrópu en þau eru sum hver í mótsögn hvor við aðra [@unice2019characterizing1]. Þau eiga það þó sameiginlegt að áætla örplast frá dekkjum heilli stærðargráðu lægra en í þessari skýrslu þar sem þau lýsa aðstæðum sem eru gjörólíkar íslenskum aðstæðum t.d. er fjarlægð helstu uppspretta örplsts (borgir) í tugum til hundruða kílómetra fjarlægð frá árósum.
 
 
 ### Hjólbarðar bifreiða {-}
 
 Hjólbarðar eyðast smám saman við akstur vegna núnings við vegi. Margir þættir hafa áhrif á slit hjólbarða en það er mismikið eftir gerð dekkja, stærð bíla og aksturslagi [@panko2018review]. Þar sem fleiri beygjur eru á vegum og hröðunarbreytingar eru tíðari verður meira álag á dekkin og slit á þeim verður meira. Því er eyðing dekkja minni á þjóðvegum en vegum í þéttbýli [@luhana2004measurement; @Kwak2013].
 
-Hjólbarðar eru samsettir úr flókinni blöndu efna sem er blandað með ólíkum hætti eftir þörfum. Slit er misjafnt eftir því fyrir hvaða gerð farartækja dekkin eru framleidd og hvernig slitlag vegarins er [@grigoratos2014non]. Gúmmísólar venjulegra bíldekkja eru gerðir úr blöndu af gervigúmmíi (aðallega stýren bútadíen gúmmí og bútadíen gúmmí), náttúrulegu gúmmíi, kinroki (e. carbon black) og ýmsum íblöndunarefnum [@Evans2006]. Hlutfall plastfjölliða í slitlagi hjólbarða er á bilinu 40-60% [@Redondo-hasselerharm2018; @ahlbom1994nya; @barbin1994science] (tekið saman af [@Wik2009]). Dekkjaagnirnar sem myndast við akstur blandast öðrum ögnum sem eru í malbikinu og vegrykinu sem breytir efnasamsetningu agnanna [@kreider2010physical]. Þessi blanda dekkja- og vegslits (e. tyre and road wear particles - TRWP) getur því til viðbótar innihaldið efni á borð við bik, þ.e. úr malbiki [@fauser2002tire], og ryk frá bremsuborðum/diskum [@kwak2013characterization]. Í þessari skýrslu er litið á gúmmíblönduna, ásamt öðrum bætiefnum sem er er blandað saman í slitlagi hjólbarða, sem eina heild óháð fjölliðuinnihaldi.
+Hjólbarðar eru samsettir úr flókinni blöndu efna sem er blandað með ólíkum hætti eftir þörfum. Slit er misjafnt eftir því fyrir hvaða gerð farartækja dekkin eru framleidd og hvernig slitlag vegarins er [@grigoratos2014non]. Gúmmísólar venjulegra bíldekkja eru gerðir úr blöndu af gervigúmmíi (aðallega stýren bútadíen gúmmí og bútadíen gúmmí), náttúrulegu gúmmíi, kinroki (e. carbon black) og ýmsum íblöndunarefnum [@Evans2006]. Hlutfall plastfjölliða í slitlagi hjólbarða er á bilinu 40-60% [@Redondo-hasselerharm2018; @ahlbom1994nya; @barbin1994science] (tekið saman af Wik 2009 [@Wik2009]). Dekkjaagnirnar sem myndast við akstur blandast öðrum ögnum sem eru í malbikinu og vegrykinu sem breytir efnasamsetningu agnanna [@kreider2010physical]. Þessi blanda dekkja- og vegslits (e. tyre and road wear particles - TRWP) getur því til viðbótar innihaldið efni á borð við bik, þ.e. úr malbiki [@fauser2002tire], og ryk frá bremsuborðum/diskum [@kwak2013characterization]. Í þessari skýrslu er litið á gúmmíblönduna, ásamt öðrum bætiefnum sem er er blandað saman í slitlagi hjólbarða, sem eina heild óháð fjölliðuinnihaldi.
 
 Ein leið til að áætla magn dekkjaslits er að miða við staðlaðar losunartölur mg/km ólíkra þyngdarflokka ökutækja. Samkvæmt Klein (2017)[-@klein2017methods] er slit hjólbarða fólksbifreiða 85-132 milligrömm fyrir hvern ekinn kílómetra, hópbifreiða 267-415 mg/km, sendibifreiða 102-159 mg/km og vörubifreiða 546-850 mg/km.
 
 Í töflu \@ref(tab:akstur) má sjá fjölda bifreiða af mismunandi gerðum í umferð á Íslandi (þann 14. ágúst 2018) og meðalakstur samkvæmt upplýsingum frá Samgöngu- og sveitarstjórnaráðuneytinu. Séu þessar tölur margfaldað með áætluðu dekkjasliti fyrir viðkomandi ökutækjaflokka *i* er áætlað dekkjaslit er reiknað á eftirfarandi hátt: Losun~i~ = (fjöldi × meðalakstur × mg/km)~i~. Niðurstaðan er þá að árið 2017 hafi slit frá fólksbifreiðum verið 244-378 tonn, sendibifreiðum 34-52 tonn, hópbifreiðum 22-34 tonn, og vörubifreiðum 79-122 tonn.
 
-Farleiðir dekkjaslits er að langmestu leiti með affallsvatni vega [@Verschoor2016] og eru vindbornar agnir svotil utanskildar í þessari skýrslu. Losun örplasts vegna dekkjaslits er áætlað. Við metum það sem svo að:
+Farleiðir dekkjaslits er að langmestu leyti með affallsvatni vega [@Verschoor2016] og eru vindbornar agnir svotil utanskildar í þessari skýrslu. Losun örplasts vegna dekkjaslits er áætlað. Við metum það sem svo að:
 
   - um þriðjungur allrar umferðar sé á hringvegi þar sem hverfandi magn dekkjaslits berst til hafs.
 - um 2/3 hlutar allrar umferðar sé í þéttbýli þar sem hátt hlutfall dekkjaslits berst til hafs eða um 60% í gegnum ræsi. 
@@ -319,7 +320,7 @@ kable(linur, caption = 'Áætluð árleg uppspretta örplasts frá vegmerkingum 
     }
 ```
 
-Líkt og við á um dekkjaagnir berst slit frá vegmerkingum helst með vindi og ofanvatni í jarðveg eða fráveitukerfi, skurði, ár og læki. Miðað við 60% ofanvatns berist í fráveitukerfi í þéttbýli og 10% í dreifbýli má áætla að losun örplasts í hafið frá vegmerkingum sé **5,7 - 42,6**.
+Líkt og við á um dekkjaagnir berst slit frá vegmerkingum helst með vindi og ofanvatni í jarðveg eða fráveitukerfi, skurði, ár og læki. Miðað við 60% ofanvatns berist í fráveitukerfi í þéttbýli og 10% í dreifbýli má áætla að losun örplasts í hafið frá vegmerkingum sé **5,7 - 42,6 tonn**.
 
 
 ```{r vegmerkingar2, echo=FALSE, fig.cap="Áætluð árleg heildarlosun örplasts í hafið frá vegmerkingum á Íslandi árið 2017 er **5,7 - 42,6 t**."}
@@ -381,9 +382,6 @@ snertilendingar=75497
 
 ## Málning {-}
 
-*Fyrirvari: Innlend framleiðsla er ekki tekin með í reikninginn hér því ekki fengust nákvæmar upplýsingar um innflutt magn þeirra efna sem eru notuð til að blanda málningu. Hægt er að nálgast lista yfir fyrirtæki sem kaupa inn vissar vörur og grennslast betur fyrir um hvaða efni um ræðir en Tollstjóri má ekki afhenda þann lista nema með lagaheimild.*
-
-
 ### Utanhússmálning {-}
 
 Flestar gerðir málningar eru með syntetískum fjölliðum sem bindiefni [@Durkin2018] og vitað er að málning slitnar og veðrast. Mest er innflutt af akrýl- og vínylblandaðri málningu til landsins til notkunar innanhúss og utan en bæði þessi efni eru plastefni. Utanhússmálning flagnar af og veðrast að einhverju leyti en aðallega losnar hún af við háþrýstiþvott og getur borist til hafs með fráveitukerfum og vindum. Það skal tekið fram að hluti plastefna í utanhússmálningu sundrast vegna útfjólublárrar geislunar og vatnsrofs og berst því ekki í umhverfið sem örplast. Á líftíma málningar á veggjum og þökum utanhúss brotnar allt að 67% einliða plastefnanna niður í koltvísýring, vatn og nitur [@Hann2018] og er sá hluti því dreginn frá heildarlosun örplasts frá utanhússmálningu. 
@@ -392,10 +390,9 @@ Markaðshlutur innimálningar gagnvart útimálningu er ólíkur milli rannsókn
 
 Timburklædd hús þarf að mála oftar en steinhús. Á Íslandi er lítið um timburklædd hús en hér eru aftur á móti nánast engar ómálaðar múrsteinsbyggingar sem eru mjög algengar í Skandinavíu og víðar Evrópu. Þrátt fyrir þónokkurn fjölda steinaðra bygginga hér á landi (um 3000 byggingar um síðustu aldamót [@Guðmundsson2003]) sem ætti ekki að þurfa að mála eru flest hús máluð og ólíkt nágrannaþjóðunum mála Íslendingar næstum öll þök.
 
-Útimálun er framkvæmd vegna nýbygginga eða slits, bæði á þökum og veggjum en innimálun er hins vegar framkvæmd við eigendaskipti og nýbyggingu. Hlutfall sölu útimálningar hjá innlendum söluaðilum er mishátt eftir því hvort viðskiptin eru við fagfólk eða heimili.
-Samkvæmt tölvupósti er hlutfall útimálningar undir 30% hjá stórum söluaðila sem afgreiðir heimili að mestu en hærra hjá öðrum stórum söluaðila (yfir 60%) sem afgreiðir að mestu fagfólk.
+Útimálun er framkvæmd vegna nýbygginga eða slits, bæði á þökum og veggjum en innimálun er hins vegar framkvæmd við eigendaskipti og nýbyggingu. Hlutfall sölu útimálningar hjá innlendum söluaðilum er mishátt eftir því hvort viðskiptin eru við fagfólk eða heimili. Hjá stórum ónefndum söluaðila, sem afgreiðir heimili að mestu, er hlutfall útimálningar hérlendis undir 30%. Það er hærra hjá öðrum stórum söluaðila (yfir 60%) sem afgreiðir að mestu fagfólk.
 
-Innflutt málning árin 2016 og 2017 var 3.15 þúsund tonn á ári [@tollur2017] eða um 9,3 kg á mann (hér er ekki tekið með efni sem notuð eru til framleiðslu á málningu hérlendis). Þetta er af sömu stærðargráðu og mat Hann [-@Hann2018] um málningarnotkun á mann í Evrópusambandsríkjunum (um 8,2 kg).
+Innflutt málning árin 2016 og 2017 var 3.15 þúsund tonn á ári [@tollur2017] eða um 9,3 kg á mann (hér er ekki tekið með efni sem notuð eru til framleiðslu á málningu hérlendis). Þetta er af sömu stærðargráðu og mat Hann [-@Hann2018] um málningarnotkun á mann í Evrópusambandsríkjunum (um 8,2 kg). Hér er átt við innflutta tilbúna málningu en innlend framleiðsla er undanskilin ^[Fyrirvari: Innlend framleiðsla er ekki tekin með í reikninginn hér því ekki fengust nákvæmar upplýsingar um innflutt magn þeirra efna sem eru notuð til að blanda málningu. Hægt er að nálgast lista yfir fyrirtæki sem kaupa inn vissar vörur og grennslast betur fyrir um hvaða efni um ræðir en Tollstjóri má ekki afhenda slíkan lista nema með lagaheimild og ekki var sóst eftir slíkri heimild.].
 
 Losun örplasts frá utanhússmálningu hefur ekki verið könnuð beint og er þetta mat því aðeins byggt á fræðilegum grunni. Veðrun og slit málningar veldur losun á syntetískum fjölliðum út í umhverfið þar sem þær verða fyrir útfjólublárri geislun og geta brotnað niður að miklu leyti. Miðað við eftirfarandi forsendur má áætla örplastmengun frá útimálningu með eftirfarandi hætti:
 
@@ -521,7 +518,7 @@ Fjórir stórir slippir eru á landinu, þar af þrír á SV-landi og einn á Ak
 knitr::include_graphics("myndir/slippurb.jpg")
 ```
 
-Málun er tíðust á botninum undir vatnslínunni og á þann flöt er notuð sérstök málning til varnar ásætum sem annars myndu auka viðnám skipsskrokksins. Skip eru máluð um það bil einu sinni á þriggja til fimm ára fresti en botninn er gjarnan málaður annað hvert ár eða árlega. Þegar bátar eru háþrýstiþvegnir losna málningarflyksur sem geta borist í hafið. Hlutfall plastefna getur verið milli 30% og 80% (skv. tækniblöðum frá Sérefnum ehf.) og allt að 40% fellur til við háþrýstiþvott [@Verschoor2016]. Það er þó misjafnt hve mikið losnar af og samkvæmt heimildarmönnum frá slippunum sjálfum væri nærri lagi að segja að um 10% málningar sé þvegin af við háþrýstiþvott.
+Málun er tíðust á botninum undir vatnslínunni og á þann flöt er notuð sérstök málning til varnar ásætum sem annars myndu auka viðnám skipsskrokksins. Skip eru máluð á þriggja til fimm ára fresti en botninn er gjarnan málaður annað hvert ár eða árlega. Þegar bátar eru háþrýstiþvegnir losna málningarflyksur sem geta borist í hafið. Hlutfall plastefna getur verið milli 30% og 80% (skv. tækniblöðum frá Sérefnum ehf.) og allt að 40% fellur til við háþrýstiþvott [@Verschoor2016]. Það er þó misjafnt hve mikið losnar af og samkvæmt heimildarmönnum frá slippunum sjálfum væri nærri lagi að segja að um 10% málningar sé þvegin af við háþrýstiþvott.
 
 Íslenski skipaflotinn er að mestu leyti fiskiskip og í Skipaskrá eru upplýsingar um lengd og rúmmál skipa. Þær upplýsingar eru aðgengilegar á vef [fiskistofu](http://www.fiskistofa.is/) fyrir þau skip sem eru með gilt veiðileyfi en það voru alls 1146 skip árið 2018 og þar af 972 bátar undir 15 að lengd. Til að áætla flöt skipaflotans undir vatnslínu má notast við aðhvarfsjöfnuna: 
 
@@ -533,7 +530,7 @@ Málun er tíðust á botninum undir vatnslínunni og á þann flöt er notuð s
 (þar sem a = 15,8 ± 0,25 og b = 0,602 ± 0,002 og R^2^ = 0.92) frá Moser (2016)[-@Moser2016] en aðhvarfsjafnan er byggð á mælingum á um 28.000 skipum. Samkvæmt jöfnunni er heildarflötur íslenskra fiskiskipa undir vatnslínu um 169.000 m^2^. Algengt er að í öryggisleiðbeiningum fyrir botnmálningu sé reiknað með um 7 m^2^/L og því má áætla að um 20.000 L af botnmálningu þurfi á skipaflotann hérlendis eða um 36 tonn miðað við lauslega áætlun á þyngd málningarinnar um 1,5 kg/L. Aðhvarfsjafnan fellur misvel að bátum eftir lögun þeirra. Hún vanáætlar t.d. botnflöt lítilla plastbáta (s.s. Sómabáta) sem eru algengir hérlendis en út frá henni má þó sjá að meirihluti botnmálningar fer almennt á stór skip þó þau séu svo fá (sjá mynd \@ref(fig:slippur)).
 
 
-```{r slippur, echo=FALSE, message=FALSE, warning=FALSE, fig.show='hold',out.width = '50%', dev.args=list(bg="transparent"),fig.cap='Samband skipslengdar og botnflatar. Kökuritið sýnir hlutfall flatarmáls íslenskra fiskiskipa í þremur stærðarflokkum: Undir 15 metra löng skip, milli 15 og 30 metra löng og yfir 30 metra löng. Fengið með jöfnu frá Moser (2016)', fig.align='center' }
+```{r slippur, echo=FALSE, message=FALSE, warning=FALSE, fig.show='hold',out.width = '50%', dev.args=list(bg="transparent"),fig.cap='Samband skipslengdar og botnflatar. Kökuritið sýnir hlutfall botnflatar íslenskra fiskiskipa í þremur stærðarflokkum: Undir 15 metra löng skip, milli 15 og 30 metra löng og yfir 30 metra löng. Fengið með jöfnu frá Moser (2016)', fig.align='center' }
 par(mar = c(4.6, 6, 0, 0))
 Batar <- read.csv("skjol/batar.csv",fileEncoding = "UTF-8")
 litlir <- Batar[Batar$Lengd<15,]
