--- a/packages.bib
+++ b/packages.bib
@@ -17,21 +17,21 @@
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
   year = {2019},
-  note = {R package version 0.11},
+  note = {R package version 0.12},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
   year = {2019},
-  note = {R package version 0.8.1},
+  note = {R package version 0.8.3},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 @Manual{R-DT,
   title = {DT: A Wrapper of the JavaScript Library 'DataTables'},
   author = {Yihui Xie and Joe Cheng and Xianying Tan},
   year = {2019},
-  note = {R package version 0.6},
+  note = {R package version 0.8},
   url = {https://CRAN.R-project.org/package=DT},
 }
 @Manual{R-kableExtra,
@@ -45,8 +45,15 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2019},
-  note = {R package version 1.23},
+  note = {R package version 1.24},
   url = {https://CRAN.R-project.org/package=knitr},
+}
+@Manual{R-magrittr,
+  title = {magrittr: A Forward-Pipe Operator for R},
+  author = {Stefan Milton Bache and Hadley Wickham},
+  year = {2014},
+  note = {R package version 1.5},
+  url = {https://CRAN.R-project.org/package=magrittr},
 }
 @Manual{R-networkD3,
   title = {networkD3: D3 JavaScript Network Graphs from R},
@@ -55,11 +62,25 @@
   note = {R package version 0.4},
   url = {https://CRAN.R-project.org/package=networkD3},
 }
+@Manual{R-plyr,
+  title = {plyr: Tools for Splitting, Applying and Combining Data},
+  author = {Hadley Wickham},
+  year = {2016},
+  note = {R package version 1.8.4},
+  url = {https://CRAN.R-project.org/package=plyr},
+}
+@Manual{R-RColorBrewer,
+  title = {RColorBrewer: ColorBrewer Palettes},
+  author = {Erich Neuwirth},
+  year = {2014},
+  note = {R package version 1.1-2},
+  url = {https://CRAN.R-project.org/package=RColorBrewer},
+}
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
   year = {2019},
-  note = {R package version 1.13},
+  note = {R package version 1.14},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 @Manual{R-webshot,
